--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -1,1 +1,34 @@
-test
+<!doctype html>
+<html>
+    <head>
+        <title>Senten Sentence | Privacy Policy</title>
+        <style>
+            html {
+              width: 100%;
+              height: 100%;
+            }
+            body {
+              display: flex;
+              width: 100%;
+              height: 100%;
+              margin: 0;
+              background-color: gold;
+              text-align: center;
+              color: block;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            }
+          </style>
+    </head>
+    <body>
+        <h1>
+            Senten Sentence<br />
+            プライバシーポリシー
+        </h1>
+        <p>
+            本アプリケーションはユーザーの個人情報やその他使用に伴い発生する情報を一切収集しません。<br />
+            お問い合わせはappinfo[at]nodokayamamoto.comまでお願いいたします。
+        </p>
+    </body>
+</html>
