--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -28,7 +28,7 @@
         </h1>
         <p>
             本アプリケーションはユーザーの個人情報やその他使用に伴い発生する情報を一切収集しません。<br />
-            お問い合わせはappinfo[at]nodokayamamoto.comまでお願いいたします。
+            お問い合わせは<a href="https://docs.google.com/forms/d/e/1FAIpQLSeuEX4kgLXzItXxSB1ltSuwzQXhxH8nqKGpOh-eQpakD7pwcw/viewform?usp=sf_link">こちら</a>までお願いいたします。
         </p>
     </body>
 </html>
