--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -27,8 +27,12 @@
             プライバシーポリシー
         </h1>
         <p>
-            本アプリケーションはユーザーの個人情報やその他使用に伴い発生する情報を一切収集しません。<br />
-            お問い合わせは<a href="https://docs.google.com/forms/d/e/1FAIpQLSeuEX4kgLXzItXxSB1ltSuwzQXhxH8nqKGpOh-eQpakD7pwcw/viewform?usp=sf_link">こちら</a>までお願いいたします。
+          ■広告について<br />
+          本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。<br />
+          取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。<br />
+          
+          <br />Google 広告に関するポリシー<br />
+          <a href="https://policies.google.com/technologies/ads?hl=ja">https://policies.google.com/technologies/ads?hl=ja</a>
         </p>
     </body>
 </html>
