--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -24,15 +24,16 @@
     <body>
         <h1>
             Senten Sentence<br />
-            プライバシーポリシー
+            Privacy Policy
         </h1>
         <p>
-          ■広告について<br />
-          本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。<br />
-          取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。<br />
+          ■About Advertisements<br />
+          This application uses AdMob (Google Inc.) as an advertising distribution tool, and AdMob may automatically acquire your information.<br />
+          Please refer to the following link to the application privacy policy of the ad-serving provider for information on the information to be obtained,<br />
+          the purpose of use, and provision to third parties.<br />
           
-          <br />Google 広告に関するポリシー<br />
-          <a href="https://policies.google.com/technologies/ads?hl=ja">https://policies.google.com/technologies/ads?hl=ja</a>
+          <br />Google Advertising Policy<br />
+          <a href="https://policies.google.com/technologies/ads">https://policies.google.com/technologies/ads</a>
         </p>
     </body>
 </html>
